package main

import (
	"context"
	"fmt"
	pb "github.com/yourorg/cdn-common/proto"
	"google.golang.org/grpc"
	"log"
	"net"
)

type server struct {
	pb.UnimplementedPay2ServiceServer
}

func (s *server) Charge(ctx context.Context, req *pb.PayChargeRequest) (*pb.PayChargeResponse, error) {
	fmt.Printf("Charge æ¥æ”¶[%s]çš„åˆ°è¯·æ±‚ \n", req.UserID)
	return &pb.PayChargeResponse{Message: "Charge " + req.UserID}, nil
}
func (s *server) QueryStatus(ctx context.Context, req *pb.PayQueryStatusRequest) (*pb.PayQueryStatusResponse, error) {
	fmt.Printf("QueryStatus æ¥æ”¶[%s]çš„åˆ°è¯·æ±‚ \n", req.OrderID)
	return &pb.PayQueryStatusResponse{Message: "QueryStatus " + req.OrderID}, nil
}

// å³æä¾›äº†grpcæœåŠ¡ï¼Œåˆæä¾›äº†httpæœåŠ¡
func main() {

	lis, err := net.Listen("tcp", ":50051") // gRPC æœåŠ¡ç«¯å£
	if err != nil {
		if err != nil {
			log.Fatalf("failed to listen: %v", err)
		}
	}
	grpcServer := grpc.NewServer()
	pb.RegisterPay2ServiceServer(grpcServer, &server{})
	fmt.Println("ğŸš€ gRPC server listening on :50051")
	grpcServer.Serve(lis)

}
